[package]
name = "nona"
version = "0.1.0"
authors = ["Nokola"]
edition = "2018"
keywords = ["graphics", "vector", "2d"]
description = "Pure Rust antialiasing graphics library"
license = "MIT"
publish = true
homepage = "https://github.com/nokola/nona"
repository = "https://github.com/nokola/nona"

[dependencies]
bitflags = "1.2.1"
image = "0.22.3"
anyhow = "1.0.26"
rusttype = { version = "0.8.1", features = ["gpu_cache"] }
slab = "0.4.2"
num-traits = "0.2.8"
clamped = "1.0.0"
rawpointer = "0.2.1"
