[package]
name = "nona"
version = "0.1.0"
authors = ["Nokola"]
edition = "2018"
keywords = ["graphics", "vector", "2d"]
description = "Pure Rust antialiasing graphics library"
license = "MIT"
publish = true
homepage = "https://github.com/nokola/nona"
repository = "https://github.com/nokola/nona"

[dependencies]
bitflags = "1.2.1"
image = "0.23.4"
thiserror = "1.0.19"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
slab = "0.4.2"
clamped = "1.0.0"
rawpointer = "0.2.1"
